# activity-beacon

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  PRD_fix_make_check.md  activity-beacon.entitlements  coverage.xml  install.command  main.spec  master-plan.md  prd.json  progress.txt  pyproject.toml  timelapse.py
.kiro/specs/activity-beacon/: design.md  requirements.md  tasks.md
progress/: US-007.md  US-008.md  US-009.md  US-010.md  US-011.md  US-012.md  US-014.md  US-015.md  US-016.md  US-017.md  US-018.md  quality-check-fixes.md
scripts/: generate_timelapses.sh
src/activity_beacon/: __main__.py  logging.py
src/activity_beacon/daemon/: __init__.py  capture_controller.py  menu_bar_controller.py  preferences_dialog.py
src/activity_beacon/file_storage/: __init__.py  date_directory_manager.py  filesystem_reader.py  jsonl_writer.py  timestamp_validator.py
src/activity_beacon/screenshot/: __init__.py  capture.py  change_detector.py  image_processor.py
src/activity_beacon/system/: __init__.py  system_state_monitor.py
src/activity_beacon/system_state/: __init__.py  system_state_monitor.py
src/activity_beacon/viewer/: calendar_widget.py  filesystem_reader.py  main.py  main_window.py  video_player.py  window_data_parser.py  window_data_timeline.py
src/activity_beacon/window_tracking/: __init__.py  data.py  focus_tracker.py  window_enumerator.py
tests/: conftest.py  test_capture_controller.py  test_change_detector.py  test_data_classes.py  test_date_directory_manager.py  test_error_handling.py  test_filesystem_reader.py  test_focus_tracker.py  test_image_processor.py  test_integration.py  test_jsonl_writer.py  test_logging.py  test_screenshot_capture.py  test_system_state_monitor.py  test_timestamp_validator.py  test_window_enumerator.py
